Clean and fix binding generator, fix multiplication
Now compiles against system-installed llvm-3.5

--- a/lapack-jni/bindgen/README
+++ b/lapack-jni/bindgen/README
@@ -1,1 +1,1 @@
-Copy into tools/clang/tools/ of the LLVM tree then compile LLVM normally.
+This tool was tested to compile and link agains llvm-3.5.
